--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,10 @@ android {
         }
     }
 }
-
+apply plugin: 'android-apt'
 dependencies {
+    compile 'com.jakewharton:butterknife:8.4.0'
+    apt 'com.jakewharton:butterknife-compiler:8.4.0'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
